[aliases]
test = pytest

[flake8]
exclude = .*,env,lib,dist,build,tests/django_app
ignore = E402,W503

[tool:pytest]
testpaths = tests docs
norecursedirs = django_app
# pytest-postgresql gets confused in travis env, which also has pg 10 installed
postgresql_exec = /usr/lib/postgresql/9.5/bin/pg_ctl
filterwarnings = ignore

[metadata]
name = talisker
version = 0.12.0
description = A common WSGI stack
long_description = file: README.rst
author = Simon Davy
author_email = simon.davy@canonical.com
url = https://github.com/canonical-ols/talisker
keywords = talisker
classifiers = 
	License :: OSI Approved :: Apache Software License
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Natural Language :: English
	Topic :: Internet :: WWW/HTTP :: WSGI
	Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware
	Topic :: System :: Logging
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
include_package_data = True
packages = talisker
test_suite = tests
package_dir = talisker=talisker
install_requires = 
	gunicorn>=19.7.0,<20.0
	Werkzeug>=0.11.5,<0.15
	statsd>=3.2.1,<4.0
	requests>=2.16.0,<3.0
	raven>=6.4.0,<7.0
	future>=0.15.2,<0.17
	ipaddress>=1.0.16,<2.0;python_version<"3.3"

[options.extras_require]
celery = 
	celery>=3.1.25.0,<5.0
	kombu>=3.0.37,<4.4
django = django>=1.10,<2.0
prometheus = prometheus-client>=0.2.0,<0.5.0,!=0.4.0,!=0.4.1
flask = 
	flask>=0.11,<2.0
	blinker>=1.4,<2.0
dev = 
	logging_tree>=1.7
	pygments>=2.2
	psutil>=5.0
	objgraph>=3.0
pg =
	sqlparse>=0.2
	psycopg2>=2.7.0,<3.0

[options.package_data]
talisker = logstash/*

[options.entry_points]
console_scripts = 
	talisker=talisker:run_gunicorn
	talisker.run=talisker:run
	talisker.gunicorn=talisker:run_gunicorn
	talisker.gunicorn.eventlet=talisker:run_gunicorn_eventlet
	talisker.gunicorn.gevent=talisker:run_gunicorn_gevent
	talisker.celery=talisker:run_celery
	talisker.help=talisker:run_help
