[aliases]
test = pytest

[flake8]
exclude = .*,env,lib,dist,build,tests/django_app
ignore = E402,W503

[tool:pytest]
testpaths = tests docs
norecursedirs = django_app
# pytest-postgresql gets confused in travis env, which also has pg 10 installed
postgresql_exec = /usr/lib/postgresql/9.5/bin/pg_ctl
filterwarnings = ignore

[metadata]
name = talisker
version = 0.21.3
description = A common WSGI stack
long_description = file: README.rst
author = Simon Davy
author_email = simon.davy@canonical.com
url = https://github.com/canonical-ols/talisker
keywords = talisker
classifiers =
	License :: OSI Approved :: Apache Software License
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Natural Language :: English
	Topic :: Internet :: WWW/HTTP :: WSGI
	Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware
	Topic :: System :: Logging
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
include_package_data = True
packages = talisker
test_suite = tests
package_dir = talisker=talisker
install_requires =
	Werkzeug~=1.0;python_version~="3.5.0"
	Werkzeug<3;python_version>="3.6"
	statsd~=3.3;python_version~="3.5.0"
	statsd<4;python_version>="3.6"
	requests~=2.25;python_version~="3.5.0"
	requests<3.0;python_version>"3.5"
	contextvars~=2.4;python_version>="3.5" and python_version<"3.7"

[options.extras_require]
gunicorn =
	gunicorn>=19.7.0;python_version>"3.6"
	gunicorn==19.7.0,<21.0;python_version>="3.5" and python_version<"3.8"
raven = raven>=6.4.0
celery =
	celery~=4.4;python_version~="3.5.0"
	celery>=4,<5.3;python_version>"3.5"
django =
	django~=2.2;python_version~="3.5.0"
	django<4;python_version>"3.5"
prometheus =
	prometheus-client~=0.7.0;python_version~="3.5.0"
	prometheus-client<0.8;python_version>"3.5"
flask =
	flask~=1.1;python_version~="3.5.0"
	flask<3;python_version>"3.5"
	blinker~=1.5;python_version~="3.5.0"
	blinker<2;python_version>"3.5"
dev =
	logging_tree>=1.9
	pygments>=2.11
	psutil>=5.9
	objgraph>=3.5
pg =
	sqlparse>=0.4.2
	psycopg2>=2.8,<3.0
asyncio =
	aiocontextvars==0.2.2;python_version>="3.5.3" and python_version<"3.7"
gevent = gevent>=20.9.0

[options.package_data]
talisker = logstash/*

[options.entry_points]
console_scripts =
	talisker=talisker:run_gunicorn[gunicorn]
	talisker.run=talisker:run
	talisker.gunicorn=talisker:run_gunicorn[gunicorn]
	talisker.gunicorn.eventlet=talisker:run_gunicorn_eventlet[gunicorn]
	talisker.gunicorn.gevent=talisker:run_gunicorn_gevent[gunicorn]
	talisker.celery=talisker:run_celery[celery]
	talisker.help=talisker:run_help
